# package-imports-example

./: README.md  stack.yaml
example-dependency1/: example-dependency1.cabal
example-dependency1/src/: Example.hs
example-dependency2/: example-dependency2.cabal
example-dependency2/src/: Example.hs
package-imports-example/: package-imports-example.cabal
package-imports-example/src/: PackageImportsExample.hs
package-imports-example/test/: doctest.hs
