name:                package-imports-example
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     PackageImportsExample
  build-depends:       base >= 4.7 && < 5
                     , example-dependency1
                     , example-dependency2
  default-language:    Haskell2010

test-suite doctest
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             doctest.hs
  build-depends:       base
                     , doctest
                     , package-imports-example
  default-language:    Haskell2010
